footer section done

--- a/index.html
+++ b/index.html
@@ -235,12 +235,88 @@
                   </div>
             </div>
           </section>
+          <!-- happy clients says -->
 
+
+          <!-- frequently asked questions section -->
+           <section class="my-24">
+            <div class="">
+              <div class=" grid grid-cols-1 lg:grid-cols-2">
+                <figure class="px-10">
+                  <img class=""
+                    src="./images/others/faq.png"
+                    alt="questions" />
+                </figure>
+                <div class="card-body">
+                  <!-- question 1 -->
+                  <div class="collapse collapse-arrow bg-base-200 border">
+                    <input type="radio" name="my-accordion-2" checked="checked" />
+                    <div class="collapse-title text-xl font-medium">What are the most important things I should
+                      know about riding a bike?</div>
+                    <div class="collapse-content">
+                      <p>Safety First! Always obey the rules of the road. Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your bike—not just “riding” your bike. This will help you be a more focused and legally compliant bike rider. </p>
+                    </div>
+                  </div>
+                  <!-- question 2 -->
+                  <div class="collapse collapse-arrow bg-base-200 border">
+                    <input type="radio" name="my-accordion-2" />
+                    <div class="collapse-title text-xl font-medium">How can I tell if my helmet is old and I need a 
+                      new one? </div>
+                    <div class="collapse-content">
+                      <p>hello</p>
+                    </div>
+                  </div>
+                     <!-- queston 3 -->
+                  <div class="collapse collapse-arrow bg-base-200 border">
+                    <input type="radio" name="my-accordion-2" />
+                    <div class="collapse-title text-xl font-medium">My bike has been in storage is it safe to ride?</div>
+                    <div class="collapse-content">
+                      <p>hello</p>
+                    </div>
+                  </div>
+                     <!-- queston 4 -->
+                  <div class="collapse collapse-arrow bg-base-200 border">
+                    <input type="radio" name="my-accordion-2" />
+                    <div class="collapse-title text-xl font-medium">What rules should I follow when riding my bike?</div>
+                    <div class="collapse-content">
+                      <p>hello</p>
+                    </div>
+                  </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+           </section>
     </main>
     <!-- footer section -->
      <footer>
-
+      <div class="w-9/12 mx-auto w-full grid grid-cols-1 lg:grid-cols-2 bg-[#0B0D17]  text-gray-300 p-14">
+        <!-- text side -->
+         <div class="space-y-5">
+          <!-- line 1 -->
+           <div>
+            <button>Download Now</button>
+            <small>License</small>
+           </div>
+           <!-- line 2 -->
+            <div class="space-x-5">
+              <a class="test-white font-[16px]" href="#">About</a>
+              <a class="test-white font-[16px]" href="#">Features</a>
+              <a class="test-white font-[16px]" href="#">Pricing</a>
+              <a class="test-white font-[16px]" href="#">Careers</a>
+              <a class="test-white font-[16px]" href="#">Help</a>
+              <a class="test-white font-[16px]" href="#">PrivacyPolice</a>
+            </div>
+            <!-- line 3 -->
+            <p>© 2020 bike. All rights reserved</p>
+         </div>
+        <!-- image side -->
+        <div class="space-y-5">
+          <h4 class="text-[18px] text-gray-300">Get the App</h4>
+          <img src="./images/others/android.png" alt="">
+          <img src="./images/others/ios.png" alt="">
+        </div>
+      </div>
      </footer>
-   
 </body>
 </html>
