footer section done

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biker Zone</title>
+    <link rel="shortcut icon" href="images/icons/bicycle-solid.svg" type="image/x-icon">
     <!-- google font cdn -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -237,7 +238,6 @@
           </section>
           <!-- happy clients says -->
 
-
           <!-- frequently asked questions section -->
            <section class="my-24">
             <div class="">
@@ -289,8 +289,8 @@
            </section>
     </main>
     <!-- footer section -->
-     <footer>
-      <div class="w-9/12 mx-auto w-full grid grid-cols-1 lg:grid-cols-2 bg-[#0B0D17]  text-gray-300 p-14">
+     <footer class="flex justify-center bg-[#0B0D17] ">
+      <div class=" justify-between grid grid-cols-1 lg:grid-cols-2  text-gray-300 p-14">
         <!-- text side -->
          <div class="space-y-5">
           <!-- line 1 -->
@@ -311,7 +311,7 @@
             <p>© 2020 bike. All rights reserved</p>
          </div>
         <!-- image side -->
-        <div class="space-y-5">
+        <div class="space-y-5 lg:ml-96">
           <h4 class="text-[18px] text-gray-300">Get the App</h4>
           <img src="./images/others/android.png" alt="">
           <img src="./images/others/ios.png" alt="">
