done this website

--- a/index.html
+++ b/index.html
@@ -237,7 +237,85 @@
             </div>
           </section>
           <!-- happy clients says -->
-
+           <h1 class="text-5xl text-center mb-24">Happy <span class="text-[#E76F51]">Clients says</span></h1>
+           <!-- client say cond container -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+              <!-- card 1 -->
+               <div class="border py-5 text-center">
+                <div class="avatar">
+                  <div class="w-24 rounded-full">
+                    <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+                  </div>
+                </div>
+                <p class="text-[#6C6C6C] pt-7 pb-4">Slate helps you see how <br> 
+                  many more days you need <br>
+                  to work to reach your financial <br>
+                  goal for the month and year.</p>
+                  <div class="rating">
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input
+                      type="radio"
+                      name="rating-2"
+                      class="mask mask-star-2 bg-orange-400"
+                      checked="checked" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  </div>
+                  <h4 class=" text-[#23A6F0] text-[14px] font-semibold mb-4">Regina Miles</h4>
+                  <h4 class="text-[14px] font-semibold">Banker</h4>
+               </div>
+              <!-- card 2 -->
+               <div class="border py-5 text-center">
+                <div class="avatar">
+                  <div class="w-24 rounded-full">
+                    <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+                  </div>
+                </div>
+                <p class="text-[#6C6C6C] pt-7 pb-4">Slate helps you see how <br> 
+                  many more days you need <br>
+                  to work to reach your financial <br>
+                  goal for the month and year.</p>
+                  <div class="rating">
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input
+                      type="radio"
+                      name="rating-2"
+                      class="mask mask-star-2 bg-orange-400"
+                      checked="checked" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  </div>
+                  <h4 class=" text-[#23A6F0] text-[14px] font-semibold mb-4">Regina Miles</h4>
+                  <h4 class="text-[14px] font-semibold">Banker</h4>
+               </div>
+              <!-- card 3 -->
+               <div class="border py-5 text-center">
+                <div class="avatar">
+                  <div class="w-24 rounded-full">
+                    <img src="https://img.daisyui.com/images/stock/photo-1534528741775-53994a69daeb.webp" />
+                  </div>
+                </div>
+                <p class="text-[#6C6C6C] pt-7 pb-4">Slate helps you see how <br> 
+                  many more days you need <br>
+                  to work to reach your financial <br>
+                  goal for the month and year.</p>
+                  <div class="rating">
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input
+                      type="radio"
+                      name="rating-2"
+                      class="mask mask-star-2 bg-orange-400"
+                      checked="checked" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                    <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                  </div>
+                  <h4 class=" text-[#23A6F0] text-[14px] font-semibold mb-4">Regina Miles</h4>
+                  <h4 class="text-[14px] font-semibold">Banker</h4>
+               </div>
+            </div>
           <!-- frequently asked questions section -->
            <section class="my-24">
             <div class="">
@@ -289,7 +367,7 @@
            </section>
     </main>
     <!-- footer section -->
-     <footer class="flex justify-center bg-[#0B0D17] ">
+     <footer class="flex justify-center bg-[#0B0D17]">
       <div class=" justify-between grid grid-cols-1 lg:grid-cols-2  text-gray-300 p-14">
         <!-- text side -->
          <div class="space-y-5">
